# Trading-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  di.py  logging_config.py  main.py
backend/app/api/v1/: market.py  options.py  sectors.py  sentiment.py  signals.py  webhooks.py
backend/app/api/ws/: stream.py
backend/app/domain/: models.py  signal.py
backend/app/infrastructure/: db.py  nse_option_chain.py  redis_bus.py  telegram_notifier.py
backend/app/infrastructure/brokers/: base.py  kite_adapter.py
backend/app/infrastructure/news/: rss_fetcher.py
backend/app/repositories/: instrument_repository.py  signal_repository.py
backend/app/services/: candle_aggregator.py  decision_engine.py  indicators.py  instrument_service.py  mtf_analyzer.py  nifty50_options.py  options_analyzer.py  risk_manager.py  sector_rotation.py  sentiment.py
backend/app/services/backtest/: replay.py
backend/app/services/detectors/: breakout.py  (+2 more)
backend/app/utils/: market_hours.py
backend/app/workers/: _runner.py  alert_dispatcher.py  candle_aggregator.py  decision_engine.py  market_stream.py  news_poller.py  option_chain_poller.py  technical_analysis.py
backend/tests/: conftest.py  test_breakout_detector.py  test_candle_aggregator.py  test_config.py  test_decision_engine.py  test_health.py  test_nifty50_options.py  test_options_analyzer.py  test_redis_bus.py  test_risk_manager.py  test_sentiment.py
(+18 files in other folders)
