[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "kiteconnect>=5.0",
  "python-telegram-bot>=21.0",
  "tenacity>=8.2",
  "structlog>=24.1",
  "feedparser>=6.0",
  "pyyaml>=6.0",
  "python-dateutil>=2.9",
  "pytz>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx", "fakeredis>=2.21"]
ml = ["transformers>=4.40", "torch>=2.2"]
talib = ["TA-Lib>=0.4.28"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires postgres"]
